maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: type NORTH is not a member of object plm.universe.Direction
	getDirection():Direction.NORTH
                                 ^